fix: improve tooltip styles for dark mode

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -127,3 +127,19 @@ body {
         display: none !important;
     }
 }
+
+.apexcharts-tooltip-title {
+  background-color: var(--q-background-primary) !important;
+  color: var(--q-color) !important;
+  padding: 6px 10px !important;
+  border-bottom: 1px solid #444 !important;
+  border-radius: 6px 6px 0 0 !important;
+  font-weight: bold !important;
+}
+
+.apexcharts-tooltip {
+  background-color: var(--q-background-secondary) !important;
+  color: var(--q-color) !important;
+  font-size: 14px;
+  border-radius: 6px;
+}
